Fixing header logo for each page on mobile.

--- a/about.css
+++ b/about.css
@@ -818,6 +818,17 @@ min-height: 200px;
     grid-template-rows: auto auto auto auto auto;
   }
 
+  .logo {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 16px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: -10%;
+    z-index: 1;
+  }
+
   main {
     display: flex;
     flex-direction: column;
