--- a/contact.css
+++ b/contact.css
@@ -524,7 +524,7 @@ height: 200px;
     width: 150px;
     height: 150px;
     position: absolute;
-    top: 10px;
+    top: 16px;
     left: 50%;
     transform: translateX(-50%);
     margin-top: -10%;
